RESOLVED FIXED273893
[Navigation] Call intercept handlers and dispatch navigateerror/navigatesuccess
https://bugs.webkit.org/show_bug.cgi?id=273893
Summary [Navigation] Call intercept handlers and dispatch navigateerror/navigatesuccess
Patrick Griffis
Reported 2024-05-08 12:57:44 PDT
''
Attachments
Patrick Griffis
Comment 1 2024-05-08 13:31:53 PDT
EWS
Comment 2 2024-05-08 19:21:35 PDT
Committed 278546@main (2c7219b3b958): <https://commits.webkit.org/278546@main> Reviewed commits have been landed. Closing PR #28305 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-05-08 19:22:15 PDT
Note You need to log in before you can comment on or make changes to this bug.