[Navigation] Call intercept handlers and dispatch navigateerror/navigatesuccess https://bugs.webkit.org/show_bug.cgi?id=273893

Reviewed by Alex Christensen.

* LayoutTests/imported/w3c/web-platform-tests/navigation-api/focus-reset/change-focus-again-in-blur-during-intercept-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/navigation-api/focus-reset/change-focus-back-to-origial-during-intercept-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/navigation-api/focus-reset/change-focus-during-intercept-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/navigation-api/focus-reset/change-focus-then-remove-during-intercept-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/navigation-api/focus-reset/focus-reset-timing-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/navigation-api/navigate-event/intercept-handler-null-or-undefined-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/navigation-api/navigate-event/intercept-handler-throws-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/navigation-api/navigate-event/intercept-multiple-times-reject-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/navigation-api/navigate-event/intercept-reject-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/navigation-api/navigate-event/navigatesuccess-same-document-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/navigation-api/ordering-and-transition/navigate-204-205-download-then-same-document-expected.txt:
* Source/WebCore/page/NavigateEvent.cpp:
(WebCore::NavigateEvent::intercept):
* Source/WebCore/page/Navigation.cpp:
(WebCore::Navigation::innerDispatchNavigateEvent):

Canonical link: https://commits.webkit.org/278546@main